// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useBulkSelect returns a bulk select configuration 1`] = `
{
  "all": [
    {
      "selectItems": [Function],
      "selectNone": [Function],
      "selectedIds": undefined,
      "tableProps": {
        "canSelectAll": false,
        "onSelect": undefined,
      },
      "toolbarProps": {
        "bulkSelect": {
          "checked": false,
          "isDisabled": true,
          "items": [
            {
              "onClick": [Function],
              "props": {
                "isDisabled": true,
              },
              "title": "Select none",
            },
            {
              "onClick": [Function],
              "title": "Select page (0 items)",
            },
            {
              "onClick": [Function],
              "title": "Unselect all (0 items)",
            },
          ],
          "onSelect": undefined,
          "toggleProps": {
            "children": [
              "0 selected",
            ],
          },
        },
      },
      "unselectItems": [Function],
    },
  ],
  "current": {
    "selectItems": [Function],
    "selectNone": [Function],
    "selectedIds": undefined,
    "tableProps": {
      "canSelectAll": false,
      "onSelect": undefined,
    },
    "toolbarProps": {
      "bulkSelect": {
        "checked": false,
        "isDisabled": true,
        "items": [
          {
            "onClick": [Function],
            "props": {
              "isDisabled": true,
            },
            "title": "Select none",
          },
          {
            "onClick": [Function],
            "title": "Select page (0 items)",
          },
          {
            "onClick": [Function],
            "title": "Unselect all (0 items)",
          },
        ],
        "onSelect": undefined,
        "toggleProps": {
          "children": [
            "0 selected",
          ],
        },
      },
    },
    "unselectItems": [Function],
  },
  "error": undefined,
}
`;

exports[`useBulkSelect returns a bulk select configuration with the correct options 1`] = `
{
  "selectItems": [Function],
  "selectNone": [Function],
  "selectedIds": [
    "ID",
  ],
  "tableProps": {
    "canSelectAll": false,
    "onSelect": [Function],
  },
  "toolbarProps": {
    "bulkSelect": {
      "checked": true,
      "isDisabled": false,
      "items": [
        {
          "onClick": [Function],
          "props": {
            "isDisabled": false,
          },
          "title": "Select none",
        },
        {
          "onClick": [Function],
          "title": "Unselect page (1 items)",
        },
        {
          "onClick": [Function],
          "title": "Unselect all (1 items)",
        },
      ],
      "onSelect": [Function],
      "toggleProps": {
        "children": [
          "1 selected",
        ],
      },
    },
  },
  "unselectItems": [Function],
}
`;

exports[`useBulkSelect returns a bulk select configuration with the correct options 2`] = `
{
  "selectItems": [Function],
  "selectNone": [Function],
  "selectedIds": [
    "ID",
  ],
  "tableProps": {
    "canSelectAll": false,
    "onSelect": [Function],
  },
  "toolbarProps": {
    "bulkSelect": {
      "checked": null,
      "isDisabled": false,
      "items": [
        {
          "onClick": [Function],
          "props": {
            "isDisabled": false,
          },
          "title": "Select none",
        },
        {
          "onClick": [Function],
          "title": "Select page (2 items)",
        },
        {
          "onClick": [Function],
          "title": "Select all (2 items)",
        },
      ],
      "onSelect": [Function],
      "toggleProps": {
        "children": [
          "1 selected",
        ],
      },
    },
  },
  "unselectItems": [Function],
}
`;

exports[`useBulkSelect returns a bulk select configuration with the correct options 3`] = `
{
  "selectItems": [Function],
  "selectNone": [Function],
  "selectedIds": [
    "ID",
  ],
  "tableProps": {
    "canSelectAll": false,
    "onSelect": [Function],
  },
  "toolbarProps": {
    "bulkSelect": {
      "checked": null,
      "isDisabled": false,
      "items": [
        {
          "onClick": [Function],
          "props": {
            "isDisabled": false,
          },
          "title": "Select none",
        },
        {
          "onClick": [Function],
          "title": "Unselect page (1 items)",
        },
        {
          "onClick": [Function],
          "title": "Select all (2 items)",
        },
      ],
      "onSelect": [Function],
      "toggleProps": {
        "children": [
          "1 selected",
        ],
      },
    },
  },
  "unselectItems": [Function],
}
`;

exports[`useBulkSelectWithItems returns a allows to select one 1`] = `
{
  "description": "DESCRIPTION",
  "id": 6,
  "itemId": 6,
  "name": "TEST ITEM #6",
  "rowProps": {
    "selected": true,
  },
  "severity": "low",
}
`;

exports[`useBulkSelectWithItems returns a allows to select/deselect all 1`] = `
{
  "checked": false,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": true,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Select page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Select all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "0 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns a allows to select/deselect all 2`] = `
{
  "checked": true,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": false,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Unselect page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Unselect all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "20 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns a allows to select/deselect all 3`] = `
{
  "checked": false,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": true,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Select page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Select all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "0 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns a allows to select/deselect page 1`] = `
{
  "checked": false,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": true,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Select page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Select all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "0 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns a allows to select/deselect page 2`] = `
{
  "checked": true,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": false,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Unselect page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Unselect all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "20 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns a allows to select/deselect page 3`] = `
{
  "checked": false,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": true,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Select page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Select all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "0 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns a bulk select configuration 1`] = `
{
  "all": [
    {
      "clearSelection": [Function],
      "selectItems": [Function],
      "selected": [],
      "selectedItems": [],
      "tableProps": {
        "canSelectAll": false,
        "onSelect": [Function],
      },
      "toolbarProps": {
        "bulkSelect": {
          "checked": false,
          "isDisabled": false,
          "items": [
            {
              "onClick": [Function],
              "props": {
                "isDisabled": true,
              },
              "title": "Select none",
            },
            {
              "onClick": [Function],
              "title": "Select page (20 items)",
            },
            {
              "onClick": [Function],
              "title": "Select all (20 items)",
            },
          ],
          "onSelect": [Function],
          "toggleProps": {
            "children": [
              "0 selected",
            ],
          },
        },
      },
      "transformer": [Function],
      "unselectItems": [Function],
    },
  ],
  "current": {
    "clearSelection": [Function],
    "selectItems": [Function],
    "selected": [],
    "selectedItems": [],
    "tableProps": {
      "canSelectAll": false,
      "onSelect": [Function],
    },
    "toolbarProps": {
      "bulkSelect": {
        "checked": false,
        "isDisabled": false,
        "items": [
          {
            "onClick": [Function],
            "props": {
              "isDisabled": true,
            },
            "title": "Select none",
          },
          {
            "onClick": [Function],
            "title": "Select page (20 items)",
          },
          {
            "onClick": [Function],
            "title": "Select all (20 items)",
          },
        ],
        "onSelect": [Function],
        "toggleProps": {
          "children": [
            "0 selected",
          ],
        },
      },
    },
    "transformer": [Function],
    "unselectItems": [Function],
  },
  "error": undefined,
}
`;

exports[`useBulkSelectWithItems returns respects filtered results 1`] = `
{
  "checked": false,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": true,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Select page (5 items)",
    },
    {
      "onClick": [Function],
      "title": "Select all (5 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "0 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns respects filtered results 2`] = `
{
  "checked": true,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": false,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Unselect page (5 items)",
    },
    {
      "onClick": [Function],
      "title": "Unselect all (5 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "5 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns to select none after all selected 1`] = `
{
  "checked": false,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": true,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Select page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Select all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "0 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns to select none after all selected 2`] = `
{
  "checked": true,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": false,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Unselect page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Unselect all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "20 selected",
    ],
  },
}
`;

exports[`useBulkSelectWithItems returns to select none after all selected 3`] = `
{
  "checked": false,
  "isDisabled": false,
  "items": [
    {
      "onClick": [Function],
      "props": {
        "isDisabled": true,
      },
      "title": "Select none",
    },
    {
      "onClick": [Function],
      "title": "Select page (20 items)",
    },
    {
      "onClick": [Function],
      "title": "Select all (20 items)",
    },
  ],
  "onSelect": [Function],
  "toggleProps": {
    "children": [
      "0 selected",
    ],
  },
}
`;
